add task update api
